Fix #24 Weather Icon not showing

--- a/resources/css/weather.css
+++ b/resources/css/weather.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: gameboy;
-    src: url("../fonts/gameboy.ttf");
+    src: url("../font/gameboy.ttf");
 }
 
 html {
